--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </div>
 </div>
 
-<section class="intro" style="height: 700px;">
+<section class="intro" style="height: 550px;">
   <div class="row mx-0">
     <div class="col-lg-5"></div>
     <div class="col-lg-7">
@@ -458,12 +458,14 @@
     <div class="row">
       <div class="col-lg-6">
         <div class="pr-5">
-          <img
-            loading="lazy"
-            class="mb-3"
-            width="100"
-            src="images/logo.png"
-            alt="">
+          <a href="#">
+            <img
+              loading="lazy"
+              class="mb-3"
+              width="100"
+              src="images/logo.png"
+              alt="">
+          </a>
           <p class="font-weight-bold mb-3">«Благодеяние тех, кто тратит свои богатства на пути Бога, подобно семени, из
             которого произрастает семь колосьев, на каждом из них — по сто семян. Всевышний удваивает тем, кому
             пожелает.
